package Ejercicio;

//Interfaz Programa que define el método contar
public interface Programa {

    /**
     * Método contar que se implementará en las clases ProgramaCountDown y ProgramaCountUp
     * @return boolean
     */

    boolean contar();
}