@startuml
!pragma layout smetana

interface Programa {
    + contar() : boolean
}

class ProgramaCountDown {
    + contar() : boolean
}

class ProgramaCountUp {
    + contar() : boolean
}

abstract class Manejador {
    + setSucesor(sucesor : Manejador)
    + manejar(programa : Programa) : boolean
}

class ManejadorCountDown {
    + manejar(programa : Programa) : boolean
}

class ManejadorCountUp {
    + manejar(programa : Programa) : boolean
}

class HaltChecker {
    + checkHalt(programa : Programa) : boolean
}

class Reverser {
    + reverse(programa : Programa)
}

class VistaUsuario {
    + update(texto : String)
    + VistaUsuario()
}

Programa <|-- ProgramaCountDown
Programa <|-- ProgramaCountUp

Manejador <|-- ManejadorCountDown
Manejador <|-- ManejadorCountUp

HaltChecker o-- Programa
Reverser o-- Programa
Reverser o-- Manejador
VistaUsuario o-- Reverser

@enduml